--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ nav {
     padding: 9px 25px;
     cursor: pointer;
     margin-top: 5px;
-   
+    font-family: poppins;
+    font-weight: 300;
    
 }
 
