--- a/media.css
+++ b/media.css
@@ -49,4 +49,10 @@
     justify-content: center;
     margin-bottom: 30px;
    }
+
+   .description{
+       display: block;
+       text-align: center;
+       margin: auto; 
+      }
 }
