--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ nav {
     border-radius: 20px;
     padding: 9px 25px;
     cursor: pointer;
-    margin-top: 5px;
     font-family: poppins;
     font-weight: 300;
    
@@ -194,7 +193,7 @@ span {
 
 .last-page {
     width: 100%;
-    height: 300px;
+    height: 100%;
     background-color: #282531;
     position: relative;
     margin-top: 20%;
@@ -202,7 +201,7 @@ span {
 
 }
 
-.description{
+.description p{
     list-style: none; 
     font-family: poppins; 
     font-size: 14px; 
