--- a/style.css
+++ b/style.css
@@ -196,8 +196,8 @@ span {
     height: 100%;
     background-color: #282531;
     position: relative;
-    margin-top: 20%;
-    padding-top: 100px;
+    margin-top: 10%;
+    padding: 100px;
 
 }
 
